--- a/index.html
+++ b/index.html
@@ -4,20 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/base.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/base.css" />
   </head>
   <body id="index-body">
     <header>
-      <nav>
+      <!-- <nav>
         <a href="">Kanto</a>
         <a href="">Johto</a>
         <a href="">Hoenn</a>
-      </nav>
+      </nav> -->
     </header>
-    <main></main>
+    <main>
+      <section class="region-container">
+        <h2 id="kanto">KANTO</h2>
+        <img src="./assets/6.png" alt="" class="charizard" />
+        <a class="left" href="">Kanto</a>
+      </section>
+
+      <section class="region-container" id="johto">
+        <h2>JOHTO</h2>
+        <img src="./assets/160.png" alt="" class="feraligatr" />
+        <a href="">Johto</a>
+      </section>
+
+      <section class="region-container">
+        <h2 id="hoenn">HOENN</h2>
+        <img src="./assets/254.png" alt="" class="sceptile" />
+        <a class="left" href="">Hoenn</a>
+      </section>
+    </main>
+
     <footer></footer>
   </body>
 </html>
