--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
       </section>
     </main>
 
+    <div>
+      <p>test delete later</p>
+    </div>
+    <footer></footer>
     <footer>footer</footer>
   </body>
 </html>
