--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       </section>
     </main>
 
-    <footer>footer</footer>
+    <footer>
+      footer
+      <p>noe her</p>
+    </footer>
   </body>
 </html>
