--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
         <a class="left" href="">Hoenn</a>
       </section>
     </main>
-
-    <div>
-      <p>test delete later</p>
-    </div>
-    <footer></footer>
-    <footer>footer</footer>
+    
+    <footer>
+      footer
+      <p>noe her</p>
+    </footer>
   </body>
 </html>
