--- a/index.html
+++ b/index.html
@@ -11,35 +11,34 @@
   </head>
   <body id="index-body">
     <header>
-      <!-- <nav>
-        <a href="">Kanto</a>
-        <a href="">Johto</a>
-        <a href="">Hoenn</a>
-      </nav> -->
+      <nav>
+        <a href="./kanto/index.html">Kanto</a>
+        <a href="./johto/index.html">Johto</a>
+        <a href="./hoenn/index.html">Hoenn</a>
+      </nav>
+      <h1>Project pokemon</h1>
     </header>
+
     <main>
       <section class="region-container">
         <h2 id="kanto">KANTO</h2>
         <img src="./assets/6.png" alt="" class="charizard" />
-        <a class="left" href="">Kanto</a>
+        <a class="left" href="./kanto/index.html">Visit Kanto</a>
       </section>
 
-      <section class="region-container" id="johto">
-        <h2>JOHTO</h2>
+      <section class="region-container">
+        <h2 id="johto">JOHTO</h2>
         <img src="./assets/160.png" alt="" class="feraligatr" />
-        <a href="">Johto</a>
+        <a href="./johto/index.html">Visit Johto</a>
       </section>
 
       <section class="region-container">
         <h2 id="hoenn">HOENN</h2>
         <img src="./assets/254.png" alt="" class="sceptile" />
-        <a class="left" href="">Hoenn</a>
+        <a class="left" href="./hoenn/index.html">Visit Hoenn</a>
       </section>
     </main>
-    
-    <footer>
-      footer nytt
-      <p>noe her</p>
-    </footer>
+
+    <footer></footer>
   </body>
 </html>
