ready for launch

--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
     <link rel="stylesheet" href="./css/base.css" />
   </head>
   <body id="index-body">
-    <header>
-      <nav>
-        <a href="./kanto/index.html">Kanto</a>
-        <a href="./johto/index.html">Johto</a>
-        <a href="./hoenn/index.html">Hoenn</a>
-      </nav>
+    <header id="homepage-header">
       <h1>Project pokemon</h1>
     </header>
 
