--- a/kanto/index.html
+++ b/kanto/index.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./kanto.css" />
+    <link rel="stylesheet" href="../css/base.css" />
+    <link rel="stylesheet" href="../modal-nav.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav id="modal-nav">
+        <a href="./kanto/index.html">Kanto</a>
+        <a href="./johto/index.html">Johto</a>
+        <a href="./hoenn/index.html">Hoenn</a>
+      </nav>
+    </header>
+    <main>
+      <div class="error-container"></div>
+    </main>
+    <footer></footer>
+    <script src="./kanto.js" type="module"></script>
+  </body>
 </html>
