--- a/hoenn/hoenn.html
+++ b/hoenn/hoenn.html
@@ -18,6 +18,7 @@
     </header>
     <main>
       <div class="error-container"></div>
+      <div class="container"></div>
     </main>
     <footer></footer>
     <script src="./hoenn.js" type="module"></script>
