--- a/gen-iv/sinnoh.html
+++ b/gen-iv/sinnoh.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./hoenn.css" />
     <link rel="stylesheet" href="../css/base.css" />
     <link rel="stylesheet" href="../modal-nav.css" />
+    <link rel="stylesheet" href="./sinnoh.css" />
   </head>
   <body>
     <header>
@@ -17,10 +17,10 @@
       </nav>
     </header>
     <main>
+      <div class="image-container"></div>
       <div class="error-container"></div>
-      <div class="container"></div>
     </main>
     <footer></footer>
-    <script src="./hoenn.js" type="module"></script>
+    <script src="./sinnoh.js" type="module"></script>
   </body>
 </html>
