--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         <img src="./assets/254.png" alt="" class="sceptile" />
         <a class="left" href="./hoenn/index.html">Visit Hoenn</a>
       </section>
+
+      <section class="region-container">
+        <h2 id="sinnoh">Sinnoh</h2>
+        <img src="" alt="" class="" />
+        <a href="./sinnoh/index.html">Visit Sinnoh</a>
+      </section>
     </main>
 
     <script src="./homepage.js"></script>
