more fixing and adding region IV

--- a/gen-i/index.html
+++ b/gen-i/index.html
@@ -20,6 +20,7 @@
       <div class="error-container"></div>
     </main>
     <footer></footer>
+    <script src="../header.js" type="module"></script>
     <script src="./kanto.js" type="module"></script>
   </body>
 </html>
