--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
       <section class="region-container">
         <h2 id="kanto">KANTO</h2>
         <img src="./assets/6.png" alt="" class="charizard" />
-        <a class="left" href="./kanto/index.html">Visit Kanto</a>
+        <a class="left" href="./gen-i/index.html">Visit Kanto</a>
       </section>
 
       <section class="region-container">
         <h2 id="johto">JOHTO</h2>
         <img src="./assets/160.png" alt="" class="feraligatr" />
-        <a href="./johto/index.html">Visit Johto</a>
+        <a href="./gen-ii/index.html">Visit Johto</a>
       </section>
 
       <section class="region-container">
         <h2 id="hoenn">HOENN</h2>
         <img src="./assets/254.png" alt="" class="sceptile" />
-        <a class="left" href="./hoenn/index.html">Visit Hoenn</a>
+        <a class="left" href="./gen-iii/index.html">Visit Hoenn</a>
       </section>
 
       <section class="region-container">
-        <h2 id="sinnoh">Sinnoh</h2>
-        <img src="" alt="" class="" />
-        <a href="./sinnoh/index.html">Visit Sinnoh</a>
+        <h2 id="sinnoh">SINNOH</h2>
+        <img src="./assets/392.png" alt="" class="infernape" />
+        <a href="./gen-iv/index.html">Visit Sinnoh</a>
       </section>
     </main>
 
