--- a/gen-iii/index.html
+++ b/gen-iii/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/base.css" />
     <link rel="stylesheet" href="../modal-nav.css" />
-    <link rel="stylesheet" href="./sinnoh.css" />
+    <link rel="stylesheet" href="./hoenn.css" />
   </head>
   <body>
     <header>
@@ -21,6 +21,7 @@
       <div class="error-container"></div>
     </main>
     <footer></footer>
-    <script src="./sinnoh.js" type="module"></script>
+    <script src="../header.js" type="module"></script>
+    <script src="./hoenn.js" type="module"></script>
   </body>
 </html>
