--- a/gen-iv/index.html
+++ b/gen-iv/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../css/base.css" />
     <link rel="stylesheet" href="../modal-nav.css" />
     <link rel="stylesheet" href="./sinnoh.css" />
   </head>
@@ -17,7 +16,7 @@
       </nav>
     </header>
     <main>
-      <div class="image-container"></div>
+      <div class="image-wrapper"></div>
       <div class="error-container"></div>
     </main>
     <footer></footer>
