tom's work so far

--- a/gen-iv/trainer.html
+++ b/gen-iv/trainer.html
@@ -14,66 +14,75 @@
         <a href="./kanto/index.html">Kanto</a>
         <a href="./johto/index.html">Johto</a>
         <a href="./hoenn/index.html">Hoenn</a>
-        <a href="./trainer.html">Trainer</a>
+        <a href="./index.html">Go back</a>
       </nav>
     </header>
-    <!-- <section id="trainer-info">
-      <h2 id="trainer-name">Pokétrainer Tom</h2>
-      <img
-        class="trainer-tom"
-        src="../assets/sinnoh/Spr_Masters_Calem_2.png"
-        alt="sprite image of Calem from Pokemon Masters"
-      />
+    <main id="trainer-info">
+      <article id="pokemon-trainer">
+        <h2 id="trainer-name">Pokétrainer Tom</h2>
+        <img
+          class="trainer-tom"
+          src="../assets/sinnoh/Spr_Masters_Calem_2.png"
+          alt="sprite image of Calem from Pokemon Masters"
+        />
+      </article>
+
       <div>
-        <div class="active-pokemon">
-          <span id="id-of-pokemon"></span>
-          <img id="active-pokemon" src="" alt="" />
-        </div>
         <div id="pokeball-row" class="pokeball-wrapper">
           <div class="decorative"></div>
           <div class="decorative-reverse"></div>
           <img
             class="pokeball selected wiggle-animation"
-            data-pokemon-id="257"
+            data-pokemon-id="134"
             src="../assets/shared/plain-pokeball.png"
             alt="regular pokeball"
           />
           <img
             class="pokeball"
-            data-pokemon-id="160"
-            src="../assets/shared/plain-pokeball.png"
-            alt="regular pokeball"
-          />
-          <img class="pokeball" data-pokemon-id="3" src="../assets/shared/plain-pokeball.png" alt="regular pokeball" />
-          <img
-            class="pokeball"
-            data-pokemon-id="306"
+            data-pokemon-id="470"
             src="../assets/shared/plain-pokeball.png"
             alt="regular pokeball"
           />
           <img
             class="pokeball"
-            data-pokemon-id="376"
+            data-pokemon-id="197"
             src="../assets/shared/plain-pokeball.png"
             alt="regular pokeball"
           />
           <img
             class="pokeball"
-            data-pokemon-id="385"
+            data-pokemon-id="196"
+            src="../assets/shared/plain-pokeball.png"
+            alt="regular pokeball"
+          />
+          <img
+            class="pokeball"
+            data-pokemon-id="359"
+            src="../assets/shared/plain-pokeball.png"
+            alt="regular pokeball"
+          />
+          <img
+            class="pokeball"
+            data-pokemon-id="405"
             src="../assets/shared/plain-pokeball.png"
             alt="regular pokeball"
           />
         </div>
+
+        <div class="active-pokemon">
+          <img id="active-pokemon" src="" alt="" />
+        </div>
+        <span id="id-of-pokemon"></span>
+        <div class="moveset-wrapper">
+          <p class="moveset-1"></p>
+          <p class="moveset-2"></p>
+          <p class="moveset-3"></p>
+          <p class="moveset-4"></p>
+          <div></div>
+        </div>
       </div>
-    </section> -->
-
-    <main>
-      <div class="image-wrapper"></div>
-      <div class="error-container"></div>
     </main>
-
-    <footer></footer>
-    <script src="./sinnoh.js" type="module"></script>
+    <script src="./trainer.js" type="module"></script>
 
     <script src="../header.js" type="module"></script>
   </body>
